# Amazon-Systems-design-App

./: .env.example  .gitignore  AGENTS.md  FINISH_GUIDE.md  README.md  WORKSPACE.md
agent/: .env.example  .gitignore  README.md  Start-Mahika.bat  pyproject.toml
agent/Graphs & workflows/: README.md
agent/Graphs & workflows/create-seller-support-case/: BROWSER.md  CASELOG_DISCOVERY_STEPS.md  CURSOR_BROWSER_TEACH.md  FLOW.md  FORM.md  GRAPHIFY.md  HUMAN_TYPE_RULE.md  MASTER_FLOW_TREE.md  SP_API_CASE_FORM_TEXT.md  login-flow-quick.md
agent/Graphs & workflows/seller-central-login/: FLOW.md  GRAPHIFY.md  MASTER_FLOW_TREE.md  login-flow-quick.md
agent/Graphs & workflows/seller-reports/: GUIDE.md
agent/docs/: CHANGELOG.md  LAUNCH_READINESS.md  RUNBOOK.md  SETUP_QUICK.md
agent/scripts/: OTP_SETUP.md  check_ads_adgroups.py  codegen_helper.bat  help_hub_browser_loop.py  install_autostart.ps1  mahika-setup.bat  quick_setup.bat  quick_verify.bat  raise_sp_api_production_case.py  seller_login.bat  setup_nvme_folders.py  setup_oracle_vm.md  sp_api_probe.py  sp_api_registration_checklist.md  sp_api_setup.py  telegram_setup.md  watch_cursor_caselog.ps1  watch_seller_login.ps1
agent/sql/: 001_init_schema.sql
agent/src/mahika/: __init__.py  cli.py  config.py
agent/src/mahika/cockpit/: __init__.py  app.py  auth.py
agent/src/mahika/cockpit/templates/: audit.html  base.html  claims.html  dashboard.html  insights.html  login.html  orders.html
agent/src/mahika/db/: __init__.py  connection.py  migrate.py
agent/src/mahika/playwright/: __init__.py  account_switcher.py  amazon_signin_flow.py  help_hub_case_flow.py  safe_t_filer.py  selectors.py  seller_login.py  session.py  status_checker.py  support_case_flow.py  support_case_text.py  templates.py
agent/src/mahika/reports/: __init__.py  analyzer.py  detect.py  parsers.py
agent/src/mahika/runner/: __init__.py  heartbeat.py
agent/src/mahika/services/: __init__.py  claim_queue.py  composite.py  diff_detector.py  insights.py  notifier.py  ocr.py  otp_watcher.py  pipeline.py  refund_watcher.py  returns_scanner.py  scheduler.py  verdict.py
agent/src/mahika/sp_api/: __init__.py  client.py
agent/src/mahika/utils/: __init__.py  audit.py
agent/tests/: run_all.py  test_phase3_smoke.py  test_phase4_smoke.py  test_phase5_smoke.py  test_phase6_smoke.py
app/: README.md  analyze_errors.txt  build_and_install.bat  devices.txt  hot_reload.sh  pubspec.yaml  shorebird.yaml
backend/: .env.example  package-lock.json  package.json
catalog-builder/: .gitignore  README.md  index.html  (+4 more)
(+276 files in other folders)
