[project]
name = "mahika"
version = "0.1.0"
description = "Mahika — Amazon Seller Operations Agent (Project Alpha)"
authors = [{ name = "Arun Saini", email = "fireh21@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary — internal use only" }

dependencies = [
    # Database
    "psycopg[binary]>=3.2,<4.0",       # Postgres driver, binary build avoids libpq install pain
    "sqlalchemy>=2.0,<3.0",             # ORM + connection pool

    # Configuration
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",

    # Amazon SP-API client
    "python-amazon-sp-api>=1.7,<2.0",  # Wraps SP-API auth + endpoints

    # Async scheduler (Phase 4)
    "apscheduler>=3.10,<4.0",

    # Notifications (Phase 4 Telegram bot)
    "python-telegram-bot>=21.0,<22.0",

    # Cockpit (Phase 6)
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.27,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9",          # FastAPI Form() parsing for /login
    "itsdangerous>=2.0,<3.0",           # HMAC-signed session cookies

    # Image processing (Phase 3)
    # opencv-python-headless: same API as opencv-python but without the GUI
    # bindings (no QT/X11). Mahika never opens an OpenCV window, only does
    # numerical image ops, so headless saves ~80MB + dodges GUI lib conflicts
    # on Windows/server runners.
    "opencv-python-headless>=4.10,<5.0",
    "Pillow>=10.0,<12.0",
    "numpy>=1.26,<3.0",                 # matrix ops for cv2 + skimage
    "scikit-image>=0.24,<1.0",          # SSIM diff
    "pytesseract>=0.3.13,<1.0",         # OCR (requires Tesseract binary)

    # Playwright (Phase 5)
    "playwright>=1.45,<2.0",

    # HTTP / utility
    "httpx>=0.27,<1.0",
    "tenacity>=8.2,<9.0",               # Retry decorators

    # Logging
    "structlog>=24.0,<25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4,<1.0",
    "mypy>=1.10,<2.0",
]

[project.scripts]
mahika = "mahika.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mahika"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]  # line-length handled by formatter

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
